# rew3vent

./: .gitignore  README.md  et --hard commit-hash  next-env.d.ts  package-lock.json  package.json
apps/web/: next.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
apps/web/.next/cache/: .rscinfo
apps/web/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
apps/web/.next/server/app/: _not-found.rsc  about.html  about.rsc  calendar.html  calendar.rsc  create-event.html  create-event.rsc  dashboard.html  dashboard.rsc  events.html  events.rsc  explore.html  explore.rsc  index.html  index.rsc  login.html  login.rsc  (+5 more)
apps/web/public/: placeholder.txt
apps/web/src/ai/: dev.ts  index.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/context/: AuthContext.tsx  ThemeContext.tsx  WalletContext.tsx
apps/web/src/lib/: fonts.ts
apps/web/src/types/: index.ts
apps/web/src/util/: index.ts
contracts/event-reward/: Cargo.toml  build.sh
contracts/event-reward/src/: lib.rs
docs/: blueprint.md
idl/: event_reward.json
lib/: firebase.ts  genkit.ts  solana.ts  utils.ts
scripts/: deploy-solana.sh
tests/: event-reward.test.ts
(+324 files in other folders)
